--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <br>
         <button id="addFlowerButton">Agregar Flor</button>
-        <p id="message" class="hidden">Ha sido un verdadero placer coincidir contigo. A lo largo de este tiempo, he llegado a apreciar profundamente tu forma de ser, tu amabilidad y la manera en que siempre encuentras lo positivo en cada situación. Cada momento compartido ha sido especial y enriquecedor. Por eso, creo sinceramente que te mereces todo lo mejor que está por venir. Espero que sigamos compartiendo muchos más momentos juntos. https://www.youtube.com/watch?v=07A2dxfzsIg </p>
+        <p id="message" class="hidden">Ha sido un verdadero placer coincidir contigo. A lo largo de este tiempo, he llegado a apreciar profundamente tu forma de ser, tu amabilidad y la manera en que siempre encuentras lo positivo en cada situación. Cada momento compartido ha sido especial y enriquecedor. Por eso, creo sinceramente que te mereces todo lo mejor que está por venir. Espero que sigamos compartiendo muchos más momentos juntos.</p>
     </div>
     <script src="./js/script.js"></script>
 </body>
