--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1> "Para ti por bonitaaa 💗" </h1>
+        <h1> "Para ti por preciosaaa 💗" </h1>
         <div class="flower-container" id="flowerContainer">
             <!-- Aquí se mostrarán las flores -->
         </div>
